# CexUpdate_Bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.cdp-sidecar.yml  docker-compose.yml  pyproject.toml
config/: config.cdp.example.json  config.example.json
docs/: architecture-options.md
scripts/: entrypoint.sh  healthcheck.sh
src/xlist_monitor_standalone/: __init__.py  cli.py  config.py  models.py  runner.py  scraper.py  storage.py  telegram.py
tests/: test_config.py  test_telegram.py
