[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "x-list-monitor-standalone"
version = "0.1.0"
description = "Standalone X list monitor for container deployment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "playwright>=1.51.0",
  "pydantic>=2.8.0",
  "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.8.0",
]

[project.scripts]
xlist-standalone = "xlist_monitor_standalone.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
